Update commit and fix commit:
Updated ApplicationInterface
Updated AutoUpdater
Updated Boot
Updated Cloud
Updated CommandLicense
Updated ConsoleInstance
Updated DecodeProxy
Updated DecodeSpigotServer
Updated FileUtils
Updated Infrastructure
Updated Networking
Updated ServerGenerator
Updated SpigotServer

Added CommandStaticserver
Added DecodePermissionsListener
Added PermissionsGroup
Added PermissionsSystem
Added PermissionsUser